--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,21 @@ DerivedData/
 
 ## Obj-C/Swift specific
 *.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+Momkin/.DS_Store
+.DS_Store
 
 ## App packaging
 *.ipa
 *.dSYM.zip
 *.dSYM
+
+## Build generated
+build/
+DerivedData/
 
 ## Playgrounds
 timeline.xctimeline
@@ -54,7 +64,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+Podfile.lock
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
@@ -88,3 +99,9 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+### Xcode Patch ###
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
+*.xcworkspace
